2009-07-25  Eli Zaretskii  <eliz@gnu.org>

	Fix Bug#3888:

	* w32-vars.el (x-select-enable-clipboard): Doc fix.

	* term/pc-win.el (x-display-name, x-colors)
	(x-select-enable-clipboard, x-select-text): Doc fix.

	* term/common-win.el (x-display-name, x-colors): Doc fix.

	* term/ns-win.el (x-select-text, x-setup-function-keys, x-colors)
	(xw-defined-colors): Doc fix.

	* w32-fns.el (x-select-text, x-setup-function-keys)
	(x-get-selection, x-set-selection): Doc fix.

	* term/x-win.el (x-select-text, x-setup-function-keys)
	(x-select-enable-clipboard, xw-defined-colors): Doc fix.

	* select.el (x-set-selection): Doc fix.

2009-07-25  Michael Albinus  <michael.albinus@gmx.de>

	* net/zeroconf.el (zeroconf-init): Check for "GetVersionString"
	instead of "IsNSSSupportAvailable".  Avahi ought to work also when
	"IsNSSSupportAvailable" method is not available.  Reported by
	Steve Youngs <steve@sxemacs.org>.

2009-07-24  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix setting of category ?C, ?|, ?K,
	and ?H.  Fix setting of case for Latin Extended and Greek
	Extended.
	(build-unicode-category-table): Fix range checks.

2009-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dispatcher.el (vc-resynch-buffers-in-directory): Make sure
	the buffer we try to sync is current when calling
	vc-resynch-buffer.

	* vc-dir.el (vc-dir-resynch-file): Make sure vc-dir-update does
	not show up to date files.

2009-07-24  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/elint.el (elint-current-buffer, elint-defun):
	Add autoload cookies.  If necessary, initialize.
	(elint-log): Handle non-file buffers.
	(elint-initialize): Add optional argument to reinitialize.
	(elint-find-builtin-variables): Save excursion.

2009-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map): Add menu entries
	for Lint.

2009-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-print-log-internal): New function, split out from ...
	(vc-print-log): ... here.